Schedule repeat month and day are broken
Schedule start time is input in local time, but repeat interval is measured against UTC. Month is taken as exactly 30 days and day is taken as exactly 24 hours.
Obviously nobody ever used this.
Schedule start time is input in local time, but repeat interval is measured against UTC. Month is taken as exactly 30 days and day is taken as exactly 24 hours.
Obviously nobody ever used this.
added Component::Core: VLM Severity::normal Type::bug Version::master git + 1 deleted label
changed milestone to %4.0
I think it's much worse and much less subtle than just DST. If I understand correctly, the repeat code considers that a month is 30 days, so every month-based (or year-based) period is unusable. It also doesn't support leap years, nor of course leap seconds.
I think it's a matter of interface too: the argument syntax misleadingly suggest the false promise that repeating at the same time every day or month is supported. Things would be different if it offered only seconds, minutes and hours.
Either way, it would be possible to print a disclaimer warning that civil time isn't properly supported, whenever the user configures in days or months or any equivalent number of seconds.
changed title from Schedule repeat does not follow DST to Schedule repeat month and day are broken
changed the description
unassigned @MigrationBot
VideoLAN code repository instance