vlm: print warning about schedule period usability

Refs #25065